lab3/antlr/antlrbase/SasParser.py
# Generated from Sas.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SasParser ( Parser ):

    grammarFileName = "Sas.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'r@'", "';'", "'cnst@'", "'='", "'f@'", 
                     "'('", "')'", "'{'", "'}'", "'|'", "'^'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'=='", "'!='", "'and'", "'xor'", 
                     "'or'", "'<'", "'<='", "'>'", "'>='", "','", "'true'", 
                     "'false'", "'if@'", "'ifelse@'", "'for@'", "'<-'", 
                     "'['", "'..'", "']'", "'while@'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "DOUBLE", "LONG", "INT", "LINE_COMMENT", 
                      "COMMENT", "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_func = 2
    RULE_exprBase = 3
    RULE_expr = 4
    RULE_rightCmp = 5
    RULE_opCmp = 6
    RULE_unitWithBody = 7
    RULE_varList = 8
    RULE_var = 9
    RULE_exprList = 10
    RULE_number = 11
    RULE_boolean = 12
    RULE_f = 13
    RULE_t = 14
    RULE_if_ = 15
    RULE_for_ = 16
    RULE_forStat = 17
    RULE_forSeq = 18
    RULE_seq = 19
    RULE_while_ = 20

    ruleNames =  [ "prog", "stat", "func", "exprBase", "expr", "rightCmp", 
                   "opCmp", "unitWithBody", "varList", "var", "exprList", 
                   "number", "boolean", "f", "t", "if_", "for_", "forStat", 
                   "forSeq", "seq", "while_" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    ID=37
    DOUBLE=38
    LONG=39
    INT=40
    LINE_COMMENT=41
    COMMENT=42
    WS=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



        self._is_outside = True
        self._is_in_func = False
        self._cnt = 0

    def inUnit(self):
        self._is_outside = False
        self._cnt += 1

    def outUnit(self):
        self._cnt -= 1
        if self._cnt == 0:
            self._is_outside = True

    def inFunc(self):
        self._is_in_func = True
        self._is_outside = False

    def outFunc(self):
        self._is_in_func = False
        self._is_outside = True



    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SasParser.StatContext)
            else:
                return self.getTypedRuleContext(SasParser.StatContext,i)


        def getRuleIndex(self):
            return SasParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = SasParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 42
                    self.stat() 
                self.state = 47
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SasParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StatUnitWithBodyContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def unitWithBody(self):
            return self.getTypedRuleContext(SasParser.UnitWithBodyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatUnitWithBody" ):
                listener.enterStatUnitWithBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatUnitWithBody" ):
                listener.exitStatUnitWithBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatUnitWithBody" ):
                return visitor.visitStatUnitWithBody(self)
            else:
                return visitor.visitChildren(self)


    class StatFuncContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def func(self):
            return self.getTypedRuleContext(SasParser.FuncContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatFunc" ):
                listener.enterStatFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatFunc" ):
                listener.exitStatFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatFunc" ):
                return visitor.visitStatFunc(self)
            else:
                return visitor.visitChildren(self)


    class StatExprContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SasParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatExpr" ):
                listener.enterStatExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatExpr" ):
                listener.exitStatExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatExpr" ):
                return visitor.visitStatExpr(self)
            else:
                return visitor.visitChildren(self)


    class StatReturnContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SasParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatReturn" ):
                listener.enterStatReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatReturn" ):
                listener.exitStatReturn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatReturn" ):
                return visitor.visitStatReturn(self)
            else:
                return visitor.visitChildren(self)


    class StatAssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.StatContext
            super().__init__(parser)
            self.const = None # Token
            self.copyFrom(ctx)

        def varList(self):
            return self.getTypedRuleContext(SasParser.VarListContext,0)

        def exprList(self):
            return self.getTypedRuleContext(SasParser.ExprListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatAssign" ):
                listener.enterStatAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatAssign" ):
                listener.exitStatAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatAssign" ):
                return visitor.visitStatAssign(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = SasParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = SasParser.StatFuncContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                if not self._is_outside:
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, "self._is_outside")
                self.inFunc()
                self.state = 50
                self.func()
                self.outFunc()
                pass

            elif la_ == 2:
                localctx = SasParser.StatReturnContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                if not self._is_in_func:
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, "self._is_in_func")
                self.state = 54
                self.match(SasParser.T__0)
                self.state = 55
                self.expr(0)
                self.state = 56
                self.match(SasParser.T__1)
                pass

            elif la_ == 3:
                localctx = SasParser.StatUnitWithBodyContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.inUnit()
                self.state = 59
                self.unitWithBody()
                self.outUnit()
                pass

            elif la_ == 4:
                localctx = SasParser.StatAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SasParser.T__2:
                    self.state = 62
                    localctx.const = self.match(SasParser.T__2)


                self.state = 65
                self.varList()
                self.state = 66
                self.match(SasParser.T__3)
                self.state = 67
                self.exprList()
                self.state = 68
                self.match(SasParser.T__1)
                pass

            elif la_ == 5:
                localctx = SasParser.StatExprContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 70
                self.expr(0)
                self.state = 71
                self.match(SasParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SasParser.ID, 0)

        def prog(self):
            return self.getTypedRuleContext(SasParser.ProgContext,0)


        def varList(self):
            return self.getTypedRuleContext(SasParser.VarListContext,0)


        def getRuleIndex(self):
            return SasParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = SasParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(SasParser.T__4)
            self.state = 76
            self.match(SasParser.ID)
            self.state = 77
            self.match(SasParser.T__5)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SasParser.ID:
                self.state = 78
                self.varList()


            self.state = 81
            self.match(SasParser.T__6)
            self.state = 82
            self.match(SasParser.T__7)
            self.state = 83
            self.prog()
            self.state = 84
            self.match(SasParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprBaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SasParser.RULE_exprBase

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprVarContext(ExprBaseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.ExprBaseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var(self):
            return self.getTypedRuleContext(SasParser.VarContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprVar" ):
                listener.enterExprVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprVar" ):
                listener.exitExprVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprVar" ):
                return visitor.visitExprVar(self)
            else:
                return visitor.visitChildren(self)


    class ExprPowContext(ExprBaseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.ExprBaseContext
            super().__init__(parser)
            self.e1 = None # ExprBaseContext
            self.e2 = None # ExprBaseContext
            self.copyFrom(ctx)

        def exprBase(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SasParser.ExprBaseContext)
            else:
                return self.getTypedRuleContext(SasParser.ExprBaseContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprPow" ):
                listener.enterExprPow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprPow" ):
                listener.exitExprPow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprPow" ):
                return visitor.visitExprPow(self)
            else:
                return visitor.visitChildren(self)


    class ExprMultContext(ExprBaseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.ExprBaseContext
            super().__init__(parser)
            self.e1 = None # ExprBaseContext
            self.op = None # Token
            self.e2 = None # ExprBaseContext
            self.copyFrom(ctx)

        def exprBase(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SasParser.ExprBaseContext)
            else:
                return self.getTypedRuleContext(SasParser.ExprBaseContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprMult" ):
                listener.enterExprMult(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprMult" ):
                listener.exitExprMult(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprMult" ):
                return visitor.visitExprMult(self)
            else:
                return visitor.visitChildren(self)


    class ExprFuncCallContext(ExprBaseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.ExprBaseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def f(self):
            return self.getTypedRuleContext(SasParser.FContext,0)

        def exprList(self):
            return self.getTypedRuleContext(SasParser.ExprListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprFuncCall" ):
                listener.enterExprFuncCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprFuncCall" ):
                listener.exitExprFuncCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprFuncCall" ):
                return visitor.visitExprFuncCall(self)
            else:
                return visitor.visitChildren(self)


    class ExprUnaryContext(ExprBaseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.ExprBaseContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def exprBase(self):
            return self.getTypedRuleContext(SasParser.ExprBaseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprUnary" ):
                listener.enterExprUnary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprUnary" ):
                listener.exitExprUnary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprUnary" ):
                return visitor.visitExprUnary(self)
            else:
                return visitor.visitChildren(self)


    class ExprNumberContext(ExprBaseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.ExprBaseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def number(self):
            return self.getTypedRuleContext(SasParser.NumberContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprNumber" ):
                listener.enterExprNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprNumber" ):
                listener.exitExprNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprNumber" ):
                return visitor.visitExprNumber(self)
            else:
                return visitor.visitChildren(self)


    class ExprBoolContext(ExprBaseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.ExprBaseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def boolean(self):
            return self.getTypedRuleContext(SasParser.BooleanContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprBool" ):
                listener.enterExprBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprBool" ):
                listener.exitExprBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprBool" ):
                return visitor.visitExprBool(self)
            else:
                return visitor.visitChildren(self)


    class ExprAddContext(ExprBaseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.ExprBaseContext
            super().__init__(parser)
            self.e1 = None # ExprBaseContext
            self.op = None # Token
            self.e2 = None # ExprBaseContext
            self.copyFrom(ctx)

        def exprBase(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SasParser.ExprBaseContext)
            else:
                return self.getTypedRuleContext(SasParser.ExprBaseContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAdd" ):
                listener.enterExprAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAdd" ):
                listener.exitExprAdd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAdd" ):
                return visitor.visitExprAdd(self)
            else:
                return visitor.visitChildren(self)


    class ExprBracketsContext(ExprBaseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.ExprBaseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SasParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprBrackets" ):
                listener.enterExprBrackets(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprBrackets" ):
                listener.exitExprBrackets(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprBrackets" ):
                return visitor.visitExprBrackets(self)
            else:
                return visitor.visitChildren(self)


    class ExprAbsContext(ExprBaseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.ExprBaseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exprBase(self):
            return self.getTypedRuleContext(SasParser.ExprBaseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAbs" ):
                listener.enterExprAbs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAbs" ):
                listener.exitExprAbs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAbs" ):
                return visitor.visitExprAbs(self)
            else:
                return visitor.visitChildren(self)



    def exprBase(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SasParser.ExprBaseContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_exprBase, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = SasParser.ExprFuncCallContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 87
                self.f()
                self.state = 88
                self.match(SasParser.T__5)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SasParser.T__5) | (1 << SasParser.T__9) | (1 << SasParser.T__11) | (1 << SasParser.T__12) | (1 << SasParser.T__26) | (1 << SasParser.T__27) | (1 << SasParser.ID) | (1 << SasParser.DOUBLE) | (1 << SasParser.LONG) | (1 << SasParser.INT))) != 0):
                    self.state = 89
                    self.exprList()


                self.state = 92
                self.match(SasParser.T__6)
                pass

            elif la_ == 2:
                localctx = SasParser.ExprBracketsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 94
                self.match(SasParser.T__5)
                self.state = 95
                self.expr(0)
                self.state = 96
                self.match(SasParser.T__6)
                pass

            elif la_ == 3:
                localctx = SasParser.ExprAbsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 98
                self.match(SasParser.T__9)
                self.state = 99
                self.exprBase(0)
                self.state = 100
                self.match(SasParser.T__9)
                pass

            elif la_ == 4:
                localctx = SasParser.ExprUnaryContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 102
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==SasParser.T__11 or _la==SasParser.T__12):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 103
                self.exprBase(6)
                pass

            elif la_ == 5:
                localctx = SasParser.ExprBoolContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 104
                self.boolean()
                pass

            elif la_ == 6:
                localctx = SasParser.ExprVarContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 105
                self.var()
                pass

            elif la_ == 7:
                localctx = SasParser.ExprNumberContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 106
                self.number()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 118
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = SasParser.ExprPowContext(self, SasParser.ExprBaseContext(self, _parentctx, _parentState))
                        localctx.e1 = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exprBase)
                        self.state = 109
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 110
                        self.match(SasParser.T__10)
                        self.state = 111
                        localctx.e2 = self.exprBase(7)
                        pass

                    elif la_ == 2:
                        localctx = SasParser.ExprMultContext(self, SasParser.ExprBaseContext(self, _parentctx, _parentState))
                        localctx.e1 = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exprBase)
                        self.state = 112
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 113
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SasParser.T__13) | (1 << SasParser.T__14) | (1 << SasParser.T__15))) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 114
                        localctx.e2 = self.exprBase(6)
                        pass

                    elif la_ == 3:
                        localctx = SasParser.ExprAddContext(self, SasParser.ExprBaseContext(self, _parentctx, _parentState))
                        localctx.e1 = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exprBase)
                        self.state = 115
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 116
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==SasParser.T__11 or _la==SasParser.T__12):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 117
                        localctx.e2 = self.exprBase(5)
                        pass

             
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SasParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprAndContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.ExprContext
            super().__init__(parser)
            self.e1 = None # ExprContext
            self.e2 = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SasParser.ExprContext)
            else:
                return self.getTypedRuleContext(SasParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAnd" ):
                listener.enterExprAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAnd" ):
                listener.exitExprAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAnd" ):
                return visitor.visitExprAnd(self)
            else:
                return visitor.visitChildren(self)


    class ExprBaseCallContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SasParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exprBase(self):
            return self.getTypedRuleContext(SasParser.ExprBaseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprBaseCall" ):
                listener.enterExprBaseCall(self)
